--- a/c++/task mgmt/.vscode/settings.json
+++ b/c++/task mgmt/.vscode/settings.json
@@ -3,6 +3,8 @@
         "iostream": "cpp",
         "istream": "cpp",
         "iosfwd": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "ios": "cpp",
+        "limits": "cpp"
     }
 }
